--- a/src/app/pages/builds/stripedTable/stripedTable.html
+++ b/src/app/pages/builds/stripedTable/stripedTable.html
@@ -9,7 +9,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let item of smartTableData; let i = index">
+    <tr *ngFor="let item of smartTableData.run_records; let i = index">
       <td class="table-id">{{ i + 1 }}</td>
       <td>{{ item.time }}</td>
       <td>{{ item.pass_rate }}</td>
